public interface AbstractSlotFactory {
	Slot createStraightSlot();
	Slot createBonusSlot();
	Slot createProgressiveSlot();
}
